# skillo

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  resume-classification.ipynb
skillo/: __main__.py  main.py
skillo/agents/: __init__.py  analysis_agents.py  langchain_cv_processing_agent.py  langchain_experience_agent.py  langchain_job_processing_agent.py  langchain_location_agent.py  langchain_normalization_agent.py  langchain_preferences_agent.py  langchain_semantic_agent.py  langchain_skills_agent.py  langchain_supervisor_agent.py
skillo/application/: __init__.py  dto.py  export_to_csv.py  facade.py  get_document_list.py  get_document_stats.py  match_cv_to_jobs.py  match_job_to_cvs.py  protocols.py  upload_document.py
skillo/application/facades/: __init__.py  application_facade.py  config_facade.py  document_facade.py  matching_facade.py
skillo/application/mappers/: __init__.py  dto_mapper.py
skillo/application/services/: __init__.py  application_event_handler.py  event_mapper.py
skillo/application/use_cases/: __init__.py  export_to_csv.py  get_document_list.py  get_document_stats.py  match_cv_to_jobs.py  match_job_to_cvs.py  process_and_upload_documents.py  reset_database.py  upload_document.py
skillo/config/: __init__.py  settings.py
skillo/core/: __init__.py  events.py  matcher.py  processing.py  vectorstore.py
skillo/domain/: enums.py  exceptions.py  repositories.py  services.py
skillo/domain/entities/: __init__.py  agent_scores.py  document.py  match_result.py  routing_decision.py  scoring_config.py
skillo/domain/events/: __init__.py  base.py  document_events.py  management_events.py  matching_events.py  publisher.py
skillo/domain/factories/: __init__.py  match_result_factory.py
skillo/domain/interfaces/: notification.py
skillo/domain/schemas/: __init__.py  agent_responses.py
skillo/domain/services/: __init__.py  document_builder.py  document_content_builder.py  document_metadata_builder.py  interfaces.py  matching_service.py
skillo/enums/: __init__.py  experience_level_enum.py  location_enum.py  log_level.py  match_recommendation_enum.py  semantic_enum.py  work_style_enum.py
skillo/exceptions/: __init__.py  agent.py  configuration.py  document_processing.py  exceptions.py  matching.py  vectorstore.py
skillo/infrastructure/: di_container.py  logger.py
skillo/models/: vectorizer.joblib
skillo/prompts/: __init__.py  experience_prompts.yaml  prompt_loader.py  semantic_prompts.yaml  supervisor_prompts.yaml
skillo/schemas/: __init__.py  agent_responses.py
skillo/tools/: __init__.py  date_tools.py  geo_tools.py  profile_classifier.py
skillo/ui/: __init__.py  app.py  events.py
skillo/utils/: __init__.py  helpers.py  logger.py
tests/: conftest.py  test_agents.py  test_config.py  test_database.py  test_document_processing.py  test_langchain_pipelines.py  test_matching.py  test_upload.py  test_vector_similarity.py
(+67 files in other folders)
