[tool.poetry]
name = "skillo"
version = "0.1.0"
description = "AI-powered CV and job posting matching using multi-agent analysis"
authors = ["Michał Dępczyk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.48.0"
langchain = "^0.3.27"
langchain-openai = "^0.3.29"
openai = "^1.99.5"
chromadb = "^1.0.16"
pypdf = "^5.9.0"
python-dotenv = "^1.1.1"
pandas = "^2.3.1"
numpy = "^2.3.2"
tiktoken = "^0.11.0"
pyyaml = "^6.0"
geopy = "^2.4.0"
streamlit-pdf-viewer = "^0.0.13"
joblib = "^1.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"

[tool.poetry.scripts]
skillo = "skillo.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 79


[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true